--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Make the video HTML5 compatible
         uses: docker://jeandeaual/lilypond:devel-ly2video
         with:
-          args: ffmpeg -i build/video/rem-losing-my-religion.avi -c:v libx264 -pix_fmt yuv420p -movflags faststart build/video/rem-losing-my-religion.mp4
+          args: ffmpeg -i build/video/rem-losing-my-religion.avi -c:v libx264 -pix_fmt yuv420p -movflags +faststart -c:a aac -b:a 128k -map_channel 0.1.1 -movflags +faststart build/video/rem-losing-my-religion.mp4
       - name: Remove extra video file
         run: rm build/video/rem-losing-my-religion.avi
       - name: Remove extra MIDI files
